--- a/BookLibrary/build.gradle
+++ b/BookLibrary/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
 }
 
 test {
